--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,9 @@ body {
   background-color: transparent;
   z-index: 100;
   padding: 2.5rem 5rem; }
+  @media only screen and (max-width: 768px) {
+    .header {
+      padding: 2.5rem 2rem; } }
   .header_logo {
     background-image: url("../img/codebet_org_cmyk.svg");
     background-repeat: no-repeat;
@@ -249,7 +252,7 @@ body {
     align-items: center;
     justify-content: center; }
     .mobile_menu--item:hover, .mobile_menu--item:active {
-      background-color: #a20026;
+      background-color: #bc002c;
       color: white; }
 
 .mobile_menu--active {
@@ -451,8 +454,19 @@ body {
     .footer_container {
       flex-direction: column; } }
 
+.footer-col-1-5 {
+  width: 33%;
+  margin-right: 1rem; }
+  .footer-col-1-5 img {
+    width: 20%; }
+    @media only screen and (max-width: 768px) {
+      .footer-col-1-5 img {
+        margin-bottom: 3rem;
+        width: 40%; } }
+
 .footer-col-2-3 {
-  width: 33%; }
+  width: 66%;
+  margin-right: 3rem; }
   @media only screen and (max-width: 768px) {
     .footer-col-2-3 {
       width: 100%; } }
@@ -462,11 +476,14 @@ body {
     .footer-col-2-3 p:not(:first-of-type) {
       opacity: 1; }
 
-.footer-col-1-3 p {
-  margin-bottom: 1rem;
-  opacity: .6; }
-  .footer-col-1-3 p:not(:first-of-type) {
-    opacity: 1; }
+.footer-col-1-3 {
+  width: 33%;
+  margin-right: 3rem; }
+  .footer-col-1-3 p {
+    margin-bottom: 1rem;
+    opacity: .6; }
+    .footer-col-1-3 p:not(:first-of-type) {
+      opacity: 1; }
 
 .icons a i {
   font-size: 3rem;
@@ -482,8 +499,7 @@ body {
     transform: translateY(-2px); }
   @media only screen and (max-width: 768px) {
     .icons a i {
-      display: block;
-      margin: 1.5rem 0; } }
+      margin: 1rem 1rem 3rem 0; } }
 
 .row {
   margin: 0 auto;
@@ -532,9 +548,6 @@ body {
     width: calc(2 * ((100% - 2 * 3rem) / 3) + 3rem); }
   .row .col-1-of-4 {
     width: calc((100% - 3 * 3rem) / 4); }
-    @media only screen and (min-width: 768px) {
-      .row .col-1-of-4 {
-        width: calc((100% - 3rem) / 2); } }
     @media only screen and (max-width: 768px) {
       .row .col-1-of-4 {
         width: calc((100% - 3rem) / 2); } }
@@ -543,9 +556,6 @@ body {
         width: 100%; } }
   .row .no-gutter-col-1-of-4 {
     width: calc((100% - 3 * 0rem) / 4); }
-    @media only screen and (min-width: 768px) {
-      .row .no-gutter-col-1-of-4 {
-        width: calc((100% - 3rem) / 2); } }
     @media only screen and (max-width: 768px) {
       .row .no-gutter-col-1-of-4 {
         width: 100%; } }
@@ -581,9 +591,6 @@ body {
     width: 100%;
     height: 100%;
     z-index: 1; }
-    @media only screen and (min-width: 768px) {
-      .hero::after {
-        right: -26rem; } }
     @media only screen and (min-width: 1440px) {
       .hero::after {
         right: -16rem; } }
@@ -611,22 +618,12 @@ body {
     .hero_content-top {
       z-index: 5;
       position: absolute;
-      top: 50%;
+      top: calc(50% - 9.5rem);
       transform: translateY(-50%); }
       .hero_content-top--text {
         color: rgba(0, 0, 0, 0.75);
         text-transform: uppercase;
         text-align: center; }
-    .hero_content-bottom {
-      z-index: 5;
-      position: absolute;
-      bottom: 12rem; }
-      .hero_content-bottom p {
-        color: rgba(0, 0, 0, 0.75);
-        font-size: 1.8rem; }
-        @media only screen and (max-width: 420px) {
-          .hero_content-bottom p {
-            font-size: 1.6rem; } }
 
 .hero_font--large {
   font-size: 5.5rem;
@@ -684,6 +681,23 @@ body {
       font-size: 3rem;
       margin-bottom: 2rem; } }
 
+.service {
+  padding: 6.5rem;
+  transition: .3s ease all;
+  flex: 1 0 33%; }
+  .service:hover {
+    background-color: #f5f6f7; }
+  .service_wrapper {
+    display: flex;
+    flex-wrap: wrap; }
+  .service_heading {
+    margin: 1.5rem 0; }
+
+.number {
+  font-size: 5rem;
+  font-weight: bold;
+  color: #D50032; }
+
 .case {
   position: relative;
   background-color: white;
@@ -696,59 +710,32 @@ body {
     width: 100%;
     position: relative; }
 
-.case_item_wrapper {
-  width: 100%;
-  margin-top: 5rem;
+.case_item-wrapper {
+  margin-left: -2rem;
+  margin-top: 2rem;
   display: flex;
-  flex-wrap: no-wrap; }
-  @media only screen and (max-width: 1140px) {
-    .case_item_wrapper {
-      flex-wrap: wrap; } }
-  @media only screen and (max-width: 768px) {
-    .case_item_wrapper {
-      display: block; } }
-
-.case_item {
-  width: 33%;
-  height: 55rem;
-  margin-right: 0;
-  position: relative;
-  overflow: hidden;
-  display: inline-block;
-  transition: 0.3s all cubic-bezier(0.68, -0.55, 0.265, 1.55); }
-  .case_item:hover > .case-project .case_heading-bottom {
-    transform: translateY(-2.5rem); }
-  .case_item:hover > .case-project .case_paragraph {
-    visibility: visible;
-    transform: translateY(0rem);
-    opacity: 1; }
-  .case_item:hover > .case-project .arrow-icon {
-    transform: translateX(5px); }
-  .case_item:not(:last-child) {
-    margin-right: 3rem; }
-  .case_item:hover > .case_image {
-    transform: scale(1.02);
-    opacity: 1; }
-  .case_item:hover > .case_image:after {
-    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(213, 0, 50, 0)); }
-  @media only screen and (max-width: 1140px) {
-    .case_item:nth-child(2) {
-      margin-right: 0; } }
-  @media only screen and (max-width: 1140px) {
-    .case_item {
-      width: calc(50% - 3rem);
-      margin-bottom: 3rem; } }
-  @media only screen and (max-width: 991px) {
-    .case_item {
-      width: calc(50% - 3rem);
-      margin-bottom: 3rem; } }
-  @media only screen and (max-width: 768px) {
-    .case_item {
-      width: 100%;
-      margin-bottom: 3rem; } }
-  @media only screen and (max-width: 420px) {
-    .case_item {
-      height: 40rem; } }
+  flex-wrap: wrap; }
+  .case_item-wrapper .case_item {
+    flex: 1 0 calc(35.5rem - 2rem);
+    margin-top: 2rem;
+    margin-left: 2rem;
+    height: 55rem;
+    position: relative;
+    overflow: hidden;
+    transition: 0.3s all cubic-bezier(0.68, -0.55, 0.265, 1.55); }
+    .case_item-wrapper .case_item:hover > .case-project .case_heading-bottom {
+      transform: translateY(-2.5rem); }
+    .case_item-wrapper .case_item:hover > .case-project .case_paragraph {
+      visibility: visible;
+      transform: translateY(0rem);
+      opacity: 1; }
+    .case_item-wrapper .case_item:hover > .case-project .arrow-icon {
+      transform: translateX(5px); }
+    .case_item-wrapper .case_item:hover > .case_image {
+      transform: scale(1.02);
+      opacity: 1; }
+    .case_item-wrapper .case_item:hover > .case_image:after {
+      background-image: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(213, 0, 50, 0)); }
 
 .case_image {
   width: 100%;
@@ -774,9 +761,6 @@ body {
   position: absolute;
   top: -51rem;
   left: 4rem; }
-  @media only screen and (max-width: 420px) {
-    .case_heading-top {
-      top: -37rem; } }
 
 .case_heading-bottom {
   font-size: 2rem;
@@ -816,7 +800,8 @@ body {
     line-height: 130%; }
     @media only screen and (max-width: 420px) {
       .info_section--heading {
-        margin-top: 2rem; } }
+        margin-top: 2rem;
+        font-size: 3rem; } }
   .info_section--paragraph {
     color: rgba(0, 0, 0, 0.55);
     font-size: 2rem;
@@ -1002,3 +987,6 @@ body {
     left: -3px;
     background-color: #D50032;
     opacity: .5; }
+
+.u-col-1-of-3 {
+  flex: 1 0 33%; }
