--- a/sass/components/_footer.sass
+++ b/sass/components/_footer.sass
@@ -14,8 +14,20 @@
         +tablet
             flex-direction: column
 
-    &-col-2-3
+    &-col-1-5
         width: 33%
+        margin-right: 1rem
+
+        img
+            width: 20%
+            
+            +tablet
+                margin-bottom: 3rem
+                width: 40%
+    
+    &-col-2-3
+        width: 66%
+        margin-right: 3rem
 
         +tablet 
             width: 100%
@@ -28,6 +40,8 @@
 
 
     &-col-1-3
+        width: 33%
+        margin-right: 3rem
         p
             margin-bottom: 1rem
             opacity: .6
@@ -53,5 +67,4 @@
                 transform: translateY(-2px)
 
             +tablet 
-                display: block
-                margin: 1.5rem 0
+                margin: 1rem 1rem 3rem 0
