--- a/sass/pages/home.sass
+++ b/sass/pages/home.sass
@@ -15,9 +15,6 @@
         width: 100%
         height: 100%
         z-index: 1
-
-        +desktop-small
-            right: -26rem
         
         +desktop-medium
             right: -16rem
@@ -47,26 +44,13 @@
         &-top
             z-index: 5
             position: absolute
-            top: 50%
+            top: calc(50% - 9.5rem)
             transform: translateY(-50%)
                 
             &--text
                 color: $font_color--primary
                 text-transform: uppercase
                 text-align: center
-            
-        &-bottom
-            z-index: 5
-            position: absolute
-            bottom: 12rem
-            
-            p
-                color: $font_color--primary
-                font-size: 1.8rem
-
-                +mobile 
-                    font-size: $main_font-size
-  
 
 .hero_font--large
     font-size: 5.5rem
@@ -112,6 +96,30 @@
         font-size: 3rem
         margin-bottom: 2rem
 
+
+//SERVICES
+
+.service
+    padding: 6.5rem
+    transition: .3s ease all
+    flex: 1 0 33%;
+
+    &:hover
+        background-color: #f5f6f7
+
+    &_wrapper
+        display: flex
+        flex-wrap: wrap;
+
+    &_heading
+        margin: 1.5rem 0
+
+.number
+    font-size: 5rem
+    font-weight: bold
+    color: $red
+
+
 //CASE
 
 .case
@@ -127,70 +135,42 @@
         width: 100%
         position: relative
 
-.case_item_wrapper
-    width: 100%
-    margin-top: 5rem
+.case_item-wrapper
+    margin-left: -2rem;
+    margin-top: 2rem;
     display: flex
-    flex-wrap: no-wrap
-
-    +breakpoint_md
-       flex-wrap: wrap
-
-    +tablet 
-        display: block
+    flex-wrap: wrap
     
-.case_item
-    width: 33%
-    height: 55rem
-    margin-right: 0
-    position: relative
-    overflow: hidden
-    display: inline-block
-    transition: .3s all cubic-bezier(0.68, -0.55, 0.265, 1.55)
+    & .case_item
+        flex: 1 0 calc(35.5rem - 2rem)
+        margin-top: 2rem
+        margin-left: 2rem
+        height: 55rem
+        position: relative
+        overflow: hidden
+        transition: .3s all cubic-bezier(0.68, -0.55, 0.265, 1.55)
 
-    &:hover > .case-project 
-        .case_heading-bottom
-            transform: translateY(-2.5rem)
-    
-    &:hover > .case-project 
-        .case_paragraph
-            visibility: visible
-            transform: translateY(0rem)
+        &:hover > .case-project 
+            .case_heading-bottom
+                transform: translateY(-2.5rem)
+        
+        &:hover > .case-project 
+            .case_paragraph
+                visibility: visible
+                transform: translateY(0rem)
+                opacity: 1
+        
+        &:hover > .case-project 
+            .arrow-icon
+                transform: translateX(5px)
+
+        &:hover > .case_image
+            transform: scale(1.02)
             opacity: 1
-    
-    &:hover > .case-project 
-        .arrow-icon
-            transform: translateX(5px)
-
-    &:not(:last-child)
-        margin-right: $gutter-lr
-
-    &:hover > .case_image
-        transform: scale(1.02)
-        opacity: 1
-    
-    &:hover > .case_image:after
-        background-image: linear-gradient(to top, rgba(0,0,0,.7), rgba($red, 0))
-    
-    &:nth-child(2)
-        +breakpoint_md
-            margin-right: 0
+        
+        &:hover > .case_image:after
+            background-image: linear-gradient(to top, rgba(0,0,0,.7), rgba($red, 0))
             
-
-    +breakpoint_md
-        width: calc(50% - 3rem)
-        margin-bottom: 3rem
-
-    +hide_menu
-        width: calc(50% - 3rem)
-        margin-bottom: 3rem
-    
-    +tablet
-        width: 100%
-        margin-bottom: 3rem
-    
-    +mobile 
-        height: 40rem
 
 .case_image 
     width: 100%
@@ -217,9 +197,6 @@
     position: absolute
     top: -51rem
     left: 4rem
-
-    +mobile
-        top: -37rem
 
 .case_heading-bottom
     font-size: 2rem
@@ -268,6 +245,7 @@ $info_section--margin: 5rem
 
         +mobile 
             margin-top: 2rem
+            font-size: 3rem
             
     &--paragraph
         color: rgba(0,0,0,.55)
