--- a/sass/utilities/_utilities.sass
+++ b/sass/utilities/_utilities.sass
@@ -51,3 +51,9 @@
         left: -3px
         background-color: $red
         opacity: .5
+
+.u-col-1-of-3
+    flex: 1 0 33%;
+
+    // +desktop-small-mw
+    //     flex-wrap: wrap
